<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_configurations"
        android:title="@string/menu_configurations"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_sessions"
                android:title="@string/menu_sessions" />
            <item
                android:id="@+id/menu_reminders"
                android:title="@string/menu_reminders" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_statistics"
        android:title="@string/menu_statistics"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />

</menu>
