<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <CheckBox
        android:id="@+id/chkRememberVolume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remember_volume"
        android:layout_marginBottom="8dp" />

    <CheckBox
        android:id="@+id/chkPlayAsAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_as_alarm"
        android:layout_marginBottom="24dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnExportDb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/export_database"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_marginBottom="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnImportDb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/import_database"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

</LinearLayout>
